# ProjectCoin

./: .gitignore  CLAUDE.md  DATAMINING.md  PLAN.md  PLAN_RUN27.md  README.md  RUN1.md  RUN3.md  RUN4.1.md  backtest_optimized.py  backtest_original.py  backtester.py  dashboard.py  data_fetcher.py  data_fetcher_extended.py  data_fetcher_sentiment.py  ensemble.py  feature_cache.py  feature_engine.py  fetch_1year.py  fetch_derivatives.py  indicators.py  main.py  monte_carlo.py  multi.py  multi_coin_trading.py  multi_curses.py  paper_trading.py  paper_trading_tui.py  per_coin_results.json  requirements.txt  risk.py  run11c_2_results.json  run11c_3_results.json  run19_1_position_sizing.py  run19_2_portfolio_risk.py  run20_1_derivatives_features.py  run24_1_ensemble.py  run25_1_regime_ml.py  run26_1_atr_stops.py  (+24 more)
PAPERTESTS/: PAPER01.md
PAPERTESTS/2026-03-17/: trading_log_COINCLAW10.txt  trading_state_COINCLAW10.json
STRATEGIES/: adr_rev.md  bb_bounce.md  dual_rsi.md  iso_adr_rev.md  iso_bb_bounce.md  iso_bb_squeeze.md  iso_divergence.md  iso_mean_rev.md  iso_relative_z.md  iso_rsi_extreme.md  iso_vol_spike.md  iso_vwap_rev.md  mean_rev.md  scalp_bb_squeeze_break.md  scalp_stoch_cross.md  scalp_vol_spike_rev.md  short_adr_rev.md  short_bb_bounce.md  short_mean_rev.md  short_vwap_rev.md  vwap_rev.md
TEST/: prompt.md  prompt.md~
TEST/RUN141/: RUN141_suggestion.md
TEST/RUN142/: RUN142_suggestion.md
TEST/RUN143/: RUN143_suggestion.md
TEST/RUN144/: RUN144_suggestion.md
TEST/RUN145/: RUN145_suggestion.md
TEST/RUN146/: RUN146_suggestion.md
TEST/RUN147/: RUN147_suggestion.md
TEST/RUN148/: RUN148_suggestion.md
TEST/RUN149/: RUN149_suggestion.md
TEST/RUN150/: RUN150_suggestion.md
TEST/RUN151/: RUN151_suggestion.md
TEST/RUN152/: RUN152_suggestion.md
TEST/RUN153/: RUN153_suggestion.md
TEST/RUN154/: RUN154_suggestion.md
TEST/RUN155/: RUN155_suggestion.md
TEST/RUN156/: RUN156_suggestion.md
TEST/RUN157/: RUN157_suggestion.md
VERSIONS/v16b/: Cargo.toml
VERSIONS/v16b/src/: backtest.rs  config.rs  engine.rs  indicators.rs  main.rs  run33.rs  run35.rs  state.rs  strategies.rs
archive/: trader_v8.py
archive/RUN11/run11a/: Cargo.toml
archive/RUN11/run11a/src/: comparison.rs  indicators.rs  main.rs  strategies.rs  walk_forward.rs
archive/RUN11/run11b/: Cargo.toml
archive/RUN11/run11b/src/: indicators.rs  main.rs  strategies.rs  walk_forward.rs
archive/RUN13/: Cargo.toml  run13_1_results.json  run13_2_results.json
archive/RUN13/src/: strategies.rs
coinclaw/: Cargo.toml
earnings_loop/: API_RESEARCH.md  PROMPT.md  PROMPT.md~  README.md  STRATEGIES_TESTED.md  state.json  state.json~
run11c/: Cargo.toml
run13/: run13_3_results.json
run1_validate/: Cargo.toml
run9_1_rust/: Cargo.toml
run9_2_rust/: Cargo.toml
strat_backtester/: Cargo.toml
tools/: Cargo.toml
tools/src/: backtest.rs  indicators.rs  loader.rs  main.rs  mc.rs  run15a.rs  run15b.rs  run15c.rs  run15d.rs  run15e.rs  run17_2.rs  run17_3.rs  run19.rs  run20.rs  run21.rs  run22.rs  run23.rs  run24.rs  run25.rs  run26.rs  run27.rs  run27_2.rs  run27_3.rs  run28.rs  strategies.rs
(+1010 files in other folders)
