[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tools"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
rand = { version = "0.8", features = ["small_rng"] }
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
