[package]
name = "coinclaw"
version = "0.16.2"
edition = "2021"

[features]
default = []
backtest = []
run30 = ["rayon"]
run32 = ["rayon"]
run33 = ["rayon"]
run35 = ["rayon"]

[dependencies]
rayon = { version = "1", optional = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
ctrlc = "3.4"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
