[package]
name = "run13"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"

[lib]
name = "run13_lib"
path = "src/lib.rs"

[[bin]]
name = "run13"
path = "src/main.rs"

[[bin]]
name = "run13_2"
path = "src/walk_forward.rs"

[[bin]]
name = "run13_3"
path = "src/comparison.rs"

[[bin]]
name = "run13_overlap"
path = "src/overlap.rs"

[[bin]]
name = "run13_wf_unique"
path = "src/wf_unique.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
