[package]
name = "run11a"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
ctrlc = "3.4"
libc = "0.2"

[lib]
name = "run11a_lib"
path = "src/lib.rs"

[[bin]]
name = "run11a"
path = "src/main.rs"

[[bin]]
name = "run11a_2"
path = "src/walk_forward.rs"

[[bin]]
name = "run11a_3"
path = "src/comparison.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
