[package]
name = "run11b"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ctrlc = "3.4"

[lib]
name = "run11b_lib"
path = "src/lib.rs"

[[bin]]
name = "run11b"
path = "src/main.rs"

[[bin]]
name = "run11b_2"
path = "src/walk_forward.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
